--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ Data/contour_2ed5_10cm_100m.csv filter=lfs diff=lfs merge=lfs -text
 Data/contour_2ed5_10cm_100m.csv filter=lfs diff=lfs merge=lfs -text
 Results/Farrell_2ed_CUDA_h1/*.csv filter=lfs diff=lfs merge=lfs -text
 Results/Farrell_2ed_CUDA_v0/*.csv filter=lfs diff=lfs merge=lfs -text
+Results/Farrell_2ed_CUDA_h1/*.csv filter=lfs diff=lfs merge=lfs -text
